cmake_minimum_required(VERSION 3.28)
project(Netmux)
file(GLOB ACCEPTOR ${PROJECT_SOURCE_DIR}/Acceptor/*.cc *.h)
file(GLOB REACTOR ${PROJECT_SOURCE_DIR}/reactor/*.cc *.h)
file(GLOB UTILS ${PROJECT_SOURCE_DIR}/utils/*.cc *.h)
file(GLOB MAIN ${PROJECT_SOURCE_DIR}/*.cc *.h)
set(SRC ${ACCEPTOR} ${REACTOR} ${UTILS} ${MAIN})
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/lib/static)
add_library(Netmux STATIC ${SRC})